--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,24 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 main {
     color: var(--primary-color);
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
     Helvetica, Arial, "Lucida Grande", sans-serif;
+    user-select: none;
 }
 
 .container {
     width: 60%;
     margin: 0 auto;
+ 
 }
 
 
@@ -42,6 +49,7 @@ main {
 .header h2 {
     font-size: 20px;
     font-weight: 400;
+
 }
 
 .header h1 {
@@ -61,14 +69,13 @@ main {
 /*      NAVBAR        */
 
 .navbar {
-    display: flex;
-    justify-content: center;
+    margin: 0 20px;
 }
 
 .navbar ul{
     list-style: none;
-    margin: 0 20px
-
+    display: flex;
+    justify-content: center;
 }
 
 .navbar li {
@@ -76,6 +83,8 @@ main {
     border-radius: 3px;
     box-shadow: 0px 5px 10px #00000029;
     text-align: center;
+    margin: 0 20px;
+
 }
 
 .navbar ul li a {
@@ -84,6 +93,7 @@ main {
     font-size: 14px;
     padding: 12px 35px;
     display: block;
+
 }
 
 
@@ -151,6 +161,7 @@ main {
     background-color: white;
     border: 1px solid var(--secundary-color);
     border-radius: 4px;
+    cursor: pointer;
 }
 
 
@@ -217,6 +228,7 @@ main {
     border: 1px solid var(--secundary-color);
     border-radius: 5px;
     color: var(--secundary-color);
+    cursor: pointer;
 }
 
 .products-section button {
@@ -228,6 +240,7 @@ main {
     border-radius: 3px;
     color: var(--secundary-color);
     text-align: center;
+    cursor: pointer;
 }
 
 .products-section .btn-request {
@@ -298,6 +311,7 @@ main {
     text-align: center;
     margin-top: 50px ;
     margin-bottom: 70px;
+    cursor: pointer;
 }
 
 
