--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+html {
+    scroll-behavior: smooth;
+  
+}
+
+:target {
+    scroll-margin-top: 30px;
+}
+
 :root {
     --primary-color: #888888;
     --secundary-color: #707070;
@@ -27,7 +36,9 @@ main {
  
 }
 
-
+.hide {
+    display: none;
+}
 
 
 /*      HEADER         */
@@ -43,7 +54,7 @@ main {
         100% 0,
         100% 100%,
         0 65%
-    );
+    )
 }
 
 .header h2 {
@@ -76,6 +87,7 @@ main {
     list-style: none;
     display: flex;
     justify-content: center;
+
 }
 
 .navbar li {
@@ -194,12 +206,24 @@ main {
     gap: 40px;
 }
 
-.product .product-photo {
+#loading-box {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+#loading {
+    text-align: center;
+}
+
+.product .product-image {
     height: 140px;
     border: 1px solid var(--secundary-color);
 }
 
-.product h2 {
+.product h3 {
     font-size: 14px;
     font-weight: 400;
     margin-top: 14px;
@@ -214,12 +238,12 @@ main {
     margin-top: 6px;
 }
 
-.product h1 {
+.product h2 {
     font-size: 16px;
     margin-top: 6px;
 }
 
-.product button {
+.product-btn {
     width: 100%;
     margin-top: 10px;
     padding: 6px;
