--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,11 +43,7 @@ main {
 
 
 /*      HEADER         */
-
-.header {
-    text-align: center;
-    color: white ;
-    padding: 60px 0 130px 0;
+.header-background{
     background-color: var(--secundary-color);
 
     clip-path: polygon(
@@ -56,6 +52,12 @@ main {
         100% 100%,
         0 65%
     )
+}
+.header {
+    text-align: center;
+    color: white ;
+    padding: 60px 0 130px 0;
+
 }
 
 .header h2 {
@@ -166,6 +168,7 @@ main {
 .gender-opt input:last-child{
     margin-left: 40px;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .gender-opt input {
@@ -229,7 +232,7 @@ main {
     text-align: center;
 }
 
-.product .product-image {
+.product-image {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -372,4 +375,117 @@ main {
 
 .footer p {
     font-size:12px;
+}
+
+@media (max-width: 480px){
+    :target {
+        scroll-margin-top: 10px;
+    }
+
+    .header-background {
+        position: relative
+    }
+
+    .header {
+        text-align: start;
+        padding: 60px 16px 130px 16px;
+    }
+
+    .container {
+        width: 100%;
+        margin: 0;
+        padding: 0 16px;
+    }
+
+    .navbar ul {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        position: absolute;
+        top: 250px;
+        margin: 0 auto;
+    }
+
+    .navbar ul li {
+        width: 160px;
+        border: 1px solid var(--secundary-color);
+        margin: 10px 0;
+    }
+
+    .navbar ul li a {
+        padding: 12px 10px;
+    }
+
+    .signin-section {
+        flex-direction: column;
+        margin-top: 40px;
+    }
+
+    .signin-section article {
+        width: 100%;
+        max-width: 520px;
+        text-align: left;
+        margin-bottom: 30px;
+    }
+
+    .signin-form {
+        width: 100%;
+        
+    }
+
+    .products-grid {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 40px;
+    }
+
+    .product {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
+    .product-image {
+        width: 43%;
+        height: 100%;
+    }
+
+    .product-info-wrap {
+        width: 50%;
+
+    }
+
+    .product h3 {
+        margin-top: 0;
+    }
+
+    .product button {
+        padding: 6px;
+    }
+
+    .product p:first-of-type {
+        display: none;
+    }
+
+    .share-form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .share-section form label {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        margin-left: 0px;
+        width: 100%;
+    }
+
+    .share-section form label:last-of-type {
+        margin-top: 20px ;
+    }
+
+    .footer {
+        padding: 80px 0 50px 0;
+    }
 }
