--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,19 +81,20 @@ main {
 
 
 /*      NAVBAR        */
-
-.navbar {
+.navbar-query {
+    display: none;
+}
+.navbar, .navbar-query {
     margin: 0 20px;
 }
 
-.navbar ul{
+.navbar ul, .navbar-query ul{
     list-style: none;
     display: flex;
     justify-content: center;
-
 }
 
-.navbar li {
+.navbar li, .navbar-query li {
     background-color: white;
     border-radius: 3px;
     box-shadow: 0px 5px 10px #00000029;
@@ -102,7 +103,7 @@ main {
 
 }
 
-.navbar ul li a {
+.navbar ul li a, .navbar-query ul li a {
     text-decoration: none;
     color: var(--primary-color);
     font-size: 14px;
@@ -312,6 +313,10 @@ main {
     padding: 0 20px;
 }
 
+.share-form {
+    display: flex;
+}
+
 .share-section .share-text {
     padding-top: 45px;
 }
@@ -336,7 +341,7 @@ main {
 }
 
 .share-section form input {
-    width: 340px;
+    width: 340px; 
     padding: 5px;
     margin-top: 10px;
 }
@@ -397,7 +402,15 @@ main {
         padding: 0 16px;
     }
 
-    .navbar ul {
+    .navbar {
+        display: none;
+    }
+
+    .navbar-query {
+        display: flex;
+    }
+
+    .navbar-query ul {
         width: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -406,13 +419,13 @@ main {
         margin: 0 auto;
     }
 
-    .navbar ul li {
+    .navbar-query ul li {
         width: 160px;
         border: 1px solid var(--secundary-color);
         margin: 10px 0;
     }
 
-    .navbar ul li a {
+    .navbar-query ul li a {
         padding: 12px 10px;
     }
 
