fix: products-grid style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,7 +455,7 @@ main {
 
     .product {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: row;
         justify-content: space-between;
     }
 
